# dataframes

./: ChangeLog.md  README.md  dataframes.cabal  package.yaml  stack.yaml
app/: Main.hs
old/: TH.hs  Vectors.hs
old/Data/Frame/: Dplyr.hs  Frame.hs  InCore.hs  Row.hs  Types.hs
old/Dplyr/: Basic.hs  Group.hs  Ops.hs  Row.hs
old/Internal/: Frame.hs
plugin/Data/Frame/: Plugin.hs
src/Control/: Rowwise.hs
src/Control/Lens/: LazyTraversal.hs
src/Data/: DistributiveFoldable.hs  Heterogeneous.hs  Indexer.hs
src/Data/Frame/: Class.hs  Column.hs  Columns.hs  Display.hs  Field.hs  Grouped.hs  Kind.hs  Pipe.hs  Sugar.hs  TypeIndex.hs  Zoomed.hs
src/Data/Frame/DataTypes/: Factor.hs  Vector.hs  VectorMode.hs
src/Data/Frame/Dplyr/: Index.hs
src/Data/Frame/Impl/: ColVectors.hs
src/Data/Frame/Internal/: ColVector.hs  Column.hs  Repr.hs
src/Data/Frame/Series/: Class.hs  FactorSeries.hs  FactorizedSeries.hs  VectorSeries.hs
src/Data/Frame/TH/: Eval.hs  Expr.hs
src/Data/Functor/: Boilerplate.hs
src/Data/Heterogeneous/: Constraints.hs  Functors.hs  HArray.hs  HDistributive.hs  HFoldable.hs  HFunctor.hs  HList.hs  HMonoid.hs  HSmallArray.hs  HTraversable.hs  HTuple.hs  Roles.hs  TypeLevel.hs
src/Data/Heterogeneous/Class/: HApply.hs  HCoerce.hs  HConv.hs  HCreate.hs  HDistributive.hs  HFoldable.hs  HFunctor.hs  HMonoid.hs  HTraversable.hs  Member.hs  Sequential.hs  Subseq.hs  Subset.hs  TupleView.hs
src/Data/Heterogeneous/Class/TupleView/: TH.hs
src/Data/Heterogeneous/Constraints/: TH.hs  Tupled.hs  TupledInstances.hs
src/Data/Heterogeneous/HContainer/: Access.hs  RConv.hs  RecSubset.hs  Sequential.hs
src/Data/Heterogeneous/HTuple/: HTuple.hs  HTupleInstances.hs  Instances.hs  TH.hs  Types.hs
src/Data/Heterogeneous/HTuple/Instances/: HCoerce.hs  HCreate.hs  HDistributive.hs  HFoldable.hs  HFunctor.hs  HGetI.hs  HSetI.hs  HTraversable.hs  Member.hs
src/Data/Heterogeneous/TypeLevel/: Apply.hs  Index.hs  Kind.hs  List.hs  Nats.hs  Peano.hs  SNat.hs  Subseq.hs  Subset.hs
test/: Spec.hs
