cabal-version: 3.4

name:           dataframes
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/bielr/dataframes#readme>
homepage:       https://github.com/bielr/dataframes#readme
bug-reports:    https://github.com/bielr/dataframes/issues
author:         Gabriel Riera
maintainer:     gabriel.riera@uib.es
copyright:      2020 Gabriel Riera
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/bielr/dataframes

common shared-properties
  default-extensions:
      BangPatterns
      BlockArguments
      ConstraintKinds
      DataKinds
      DefaultSignatures
      DerivingStrategies
      EmptyCase
      ExplicitNamespaces
      FlexibleContexts
      FlexibleInstances
      FunctionalDependencies
      GADTs
      ImportQualifiedPost
      InstanceSigs
      LambdaCase
      LiberalTypeSynonyms
      MultiParamTypeClasses
      PolyKinds
      RankNTypes
      ScopedTypeVariables
      StandaloneDeriving
      StandaloneKindSignatures
      TypeApplications
      TypeFamilies
      TypeFamilyDependencies
      TypeOperators
  ghc-options:
      -Wall
      -Wincomplete-patterns
      -fspecialise-aggressively
      -flate-specialise
      -fexpose-all-unfoldings
  build-depends:
      base >=4.7 && <5
    , bytestring
    , comonad
    , constraints
    , containers
    , deepseq
    , distributive
    , first-class-families
    , ghc-prim
    , hashable
    , hashable
    , hashtables
    , haskell-src-exts
    , haskell-src-meta
    , lens
    , primitive
    , profunctors
    , tagged
    , template-haskell
    , text
    , type-errors
    , vector
    , vector-algorithms
  default-language: Haskell2010

library
  import: shared-properties
  ghc-options: -Werror
  exposed-modules:
      Control.Rowwise
      Data.Frame.Class
      Data.Frame.DataTypes.Vector
      Data.Frame.DataTypes.VectorMode
      Data.Frame.Series.Class
      Data.Frame.Series.VectorSeries
      Data.Frame.Display
      Data.Frame.Field
      Data.Frame.Impl.ColVectors
      Data.Frame.Kind
      Data.Frame.Pipe
      Data.Frame.Plugin
      Data.Frame.Sugar
      Data.Frame.TH.Eval
      Data.Frame.TypeIndex
      Data.Functor.Boilerplate
      Data.Heterogeneous.Class.HApply
      Data.Heterogeneous.Class.HCoerce
      Data.Heterogeneous.Class.HConv
      Data.Heterogeneous.Class.HCreate
      Data.Heterogeneous.Class.HDistributive
      Data.Heterogeneous.Class.HFoldable
      Data.Heterogeneous.Class.HFunctor
      Data.Heterogeneous.Class.HMonoid
      Data.Heterogeneous.Class.HTraversable
      Data.Heterogeneous.Class.Member
      Data.Heterogeneous.Class.Subseq
      Data.Heterogeneous.Class.Subset
      Data.Heterogeneous.Class.TupleView
      Data.Heterogeneous.Constraints
      Data.Heterogeneous.Constraints.TH
      Data.Heterogeneous.Constraints.Tupled
      Data.Heterogeneous.Constraints.TupledInstances
      Data.Heterogeneous.Functors
      Data.Heterogeneous.HList
      Data.Heterogeneous.HSmallArray
      Data.Heterogeneous.HTuple
      Data.Heterogeneous.HTuple.TH
      Data.Heterogeneous.TypeLevel
      Data.Heterogeneous.TypeLevel.Apply
      Data.Heterogeneous.TypeLevel.Index
      Data.Heterogeneous.TypeLevel.Kind
      Data.Heterogeneous.TypeLevel.List
      Data.Heterogeneous.TypeLevel.Peano
      Data.Heterogeneous.TypeLevel.SNat
      Data.Heterogeneous.TypeLevel.Subseq
      Data.Heterogeneous.TypeLevel.Subset
      Data.Indexer
  other-modules:
      Paths_dataframes
      Data.Heterogeneous.HTuple.Types
      Data.Heterogeneous.HTuple.Instances
      Data.Heterogeneous.HTuple.Instances.HCoerce
      Data.Heterogeneous.HTuple.Instances.HCreate
      Data.Heterogeneous.HTuple.Instances.HDistributive
      Data.Heterogeneous.HTuple.Instances.HFoldable
      Data.Heterogeneous.HTuple.Instances.HFunctor
      Data.Heterogeneous.HTuple.Instances.HGetI
      Data.Heterogeneous.HTuple.Instances.HSetI
      Data.Heterogeneous.HTuple.Instances.HTraversable
  hs-source-dirs:
      src
      plugin
  build-depends:
      ghc
      , uniplate

executable dataframes-exe
  import: shared-properties
  main-is: Main.hs
  other-modules: Paths_dataframes
  hs-source-dirs: app
  build-depends: dataframes

test-suite dataframes-test
  import: shared-properties
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_dataframes
  hs-source-dirs: test
  build-depends: dataframes, tasty, tasty-hunit
